# playlist-manager

./: .clinerules  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CHENGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  embed_version.awk
doc/: directory-structure.md  overview.md  plm-delete-playlist.md  plm-put-playlist.md  plm.md
libexec/playlist-manager/: plm-put-playlist
man/man1/: plm-delete-playlist.1  plm-put-playlist.1  plm.1
src/: file_utils.rs  lib.rs  logger.rs  media_file_info.rs  playlist_scanner.rs
tests/: common.rs  delete_playlist_tests.rs  integration_delete_playlist_tests.rs  integration_put_playlist_tests.rs  integration_test.rs  integration_version_tests.rs  put_playlist_tests.rs
