[package]
name = "playlist-manager"
version = "0.3.0"
edition = "2021"
authors = ["Playlist Manager Authors"]
description = "A tool to manage playlists and media files"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
anyhow = "1.0.80"
thiserror = "1.0.57"

[[bin]]
name = "plm-put-playlist"
path = "src/bin/plm-put-playlist.rs"

[[bin]]
name = "plm-delete-playlist"
path = "src/bin/plm-delete-playlist.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.0.4"
tempfile = "3.10.0"
regex = "1.10.3"
